<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/head_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".28"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent=".92"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/guideline_title_description"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".18"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/iv_nav_title"
        android:src="@mipmap/temptest_title"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/head_guideline"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.saigyouji.cloudmusic.view.widget.RoundImageView
        android:layout_width="@dimen/head_size"
        android:layout_height="@dimen/head_size"
        app:layout_constraintBottom_toTopOf="@+id/tv_nav_username"
        android:src="@mipmap/temptest_head"
        app:type="circle"
        android:scaleType="centerCrop"
        android:id="@+id/iv_nav_head"
        android:layout_marginBottom="@dimen/middle_margin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/middle_margin"/>
    <TextView
        android:id="@+id/tv_nav_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/middle_margin"
        app:layout_constraintBottom_toBottomOf="@+id/iv_nav_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        android:text="@string/user_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_level"
        app:layout_constraintStart_toEndOf="@+id/tv_nav_username"
        app:layout_constraintTop_toTopOf="@+id/tv_nav_username"
        app:layout_constraintBottom_toBottomOf="@+id/tv_nav_username"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
        android:textSize="10sp"
        android:textStyle="italic|bold"
        android:textColor="@color/white"
        android:background="@drawable/round"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/iv_nav_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nav_bottom_bar"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingBottom="@dimen/small_margin"
            android:paddingTop="@dimen/small_margin"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@mipmap/nav_message"
                android:layout_margin="@dimen/small_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_message"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"

            android:paddingBottom="@dimen/small_margin"
            android:paddingTop="@dimen/small_margin"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@mipmap/nav_vip"
                android:layout_margin="@dimen/small_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vip_center"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="@dimen/small_margin"
            android:paddingTop="@dimen/small_margin"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@mipmap/nav_friends"
                android:layout_margin="@dimen/small_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_friends"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="@dimen/small_margin"
            android:paddingTop="@dimen/small_margin"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@mipmap/mav_theme"
                android:layout_margin="@dimen/small_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_skin"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"

            android:paddingBottom="@dimen/small_margin"
            android:paddingTop="@dimen/small_margin"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@mipmap/nav_listening"
                android:layout_margin="@dimen/small_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listening"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"

            android:paddingBottom="@dimen/small_margin"
            android:paddingTop="@dimen/small_margin"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@mipmap/nav_time"
                android:layout_margin="@dimen/small_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_stop"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nav_bottom_bar"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView

            android:layout_margin="@dimen/middle_margin"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@mipmap/nav_night"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/middle_margin" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/nav_setting"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="@+id/nav_bottom_bar"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@mipmap/nav_setting"
            android:layout_margin="@dimen/middle_margin"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/middle_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>